Update this week's notes

--- a/content/week-notes/2021/12.md
+++ b/content/week-notes/2021/12.md
@@ -4,16 +4,20 @@ description: "What happened in the week of 2021-03-22?"
 date: "2021-03-28T23:00:00Z"
 draft: true
 ---
+A week back to the monotonous routine of it all
+
 - Back to work after a week off, and fortunately not missed much
+- Had some good catch ups with work friends
 - Not done any prep for my talk 🙃 but have had some thoughts about it
 - Done a fair bit of Chef stuff this week - some of it between Apex
-  - Learned the the difference betweeen lightweight and annotated Git tags this week, but helped sort M8B's Chef upload issue
+  - Learned the difference between lightweight and annotated Git tags this week, but helped sort M8B's Chef upload issue
   - Chef Pipelines are now basically ready, until the upload/Kitchen stuff can be done next PI
   - Got some good learnings about all the ways to get Jenkins to parse Chef testing output
   - Got the basis for Kitchen testing and versioning, which I'm happy with
-- Started putting clothes into the wardrobe in the bedroom and into the wardrobe room
+- Started putting clothes into the wardrobe in the bedroom and into the wardrobe room - it's amazing how much bigger the bedroom feels now!
+- Although a 45 minute, the beef empanadas were nice, and not _as much_ of a pain as we thought they'd be
 - Finally bought a few things for the house we've needed for a while
-- Matomo died, due to out of disk space, and of course I couldn't then recover it because as my most locked down server, I can't SSH on with a password (if I had it, that is) and my SSH keys didn't work as they've not been updated on it since reinstalling my machines
+- Matomo ran out of disk space and died, and of course I couldn't then recover it because as my most locked down server, I can't SSH on with a password (if I had it, that is) and my SSH keys didn't work as they've not been updated on it since reinstalling my machines, so that was a fun pre-work annoyance
   - By the time I'd got a Hetzner server finally ready, the server was up and working again, but was pretty close!
 - A weekend without takeaways - had pizza, steak and (our style) roast though so been a very successful weekend
 - Finished the last of the lovely Seward honey
@@ -21,14 +25,15 @@ draft: true
   - Definitely heard him yowling/crying at the front door in the early hours, and wanting to be let in/out by doors
   - He snuck on the counter one lunch lunch, licking at some chicken skin we'd left out - and then the next day ended up spraying there, on the counter, which he's done only a couple of times in about 7 years, so really not impressed
   - Had a very stressed Wednesday
-  - Took him to the vets to see if they had any suggestions - they're running tests - but it was quite fun sitting in the car watching all the other visitors - a three legged doggo who was very excited to be going home, a cute little white Scotty that was excited by everything going on, and **??**
-  - It was especially fun getting Morph into his carry case - he was nice and sleepy so we thought it'd be easy, but he woke up pretty quickly, yowled at me and almost ripped my tshirt, then clung onto Anna's **??** jumper, so we ended up laying it down and literally pushing his bum until he got in **??**
-- An unexpected Sunday of chatting with the fam about the conservatory drama
-- Had a weird dream about exams at (maybe) Uni, and then being at school with Kelvin, Maisam and Niral, and the school somehow requiring 20-minute busrides between buildings, and also Rakki Rakkas being in Northwood? Very weird
+  - Took him to the vets to see if they had any suggestions - they're running tests - but it was quite fun sitting in the car watching all the other visitors - a three legged doggo who was very excited to be going home and a cute little white Scotty that was excited by everything going on
+  - It was especially fun getting Morph into his carry case - he was nice and sleepy so we thought it'd be easy, but he woke up pretty quickly, yowled at me and almost ripped my T-shirt, then clung onto Anna's jumper, so we ended up laying it down and literally pushing his bum until he, ungraciously, got in. Not our best effort, but got the job done
+- Had a weird dream about exams at (maybe) Uni, and then being at school with Kelvin, Maisam and Niral, and the school somehow requiring 20-minute bus rides between buildings, and also Rakki Rakkas being in Northwood? Very weird
 - Good Ring Fit week - albeit Monday's was actually on Sunday
 - Re-done my sums, and feeling a bit better
 - Done nothing with all the emails re windows I've had
 - Feeling a bit better after catching up on sleep this weekend
+- After a couple of days of calling NG1 cleaners, I booked The Maids in for a pre-family visit, which will be nice to have a good clean of the house
+- An unexpected Sunday of chatting with the fam about the conservatory drama
 
 Watched:
 
@@ -36,3 +41,4 @@ Watched:
 - _Friday Night Dinner_
   - The "Robert Mugabe" comment has had me chuckling for days
 - _Suits_
+- _The Falcon and the Winter Soldier_
