--- a/content/mf2/2021/03/r008i.md
+++ b/content/mf2/2021/03/r008i.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/JamieTanna/status/1376565384258682885" ],
     "published" : [ "2021-03-29T17:00:00+0100" ],
     "category" : [ "github" ],
     "repost-of" : [ "https://twitter.com/chochosmx/status/1376549834623229959" ],
