MP: Update likes 2021/04/xm954

--- a/content/mf2/2021/04/xm954.md
+++ b/content/mf2/2021/04/xm954.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/doeeeyes/status/1377645852668354565" ],
     "name" : [ "Like of @doeeeyes's tweet" ],
     "published" : [ "2021-04-01T23:21:00+0100" ],
     "like-of" : [ "https://twitter.com/doeeeyes/status/1377645852668354565" ],
