MP: Update likes 2021/04/627qr

--- a/content/mf2/2021/04/627qr.md
+++ b/content/mf2/2021/04/627qr.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/jack_daniel/status/1378181461673717763" ],
     "name" : [ "Like of @jack_daniel's tweet" ],
     "published" : [ "2021-04-03T14:25:00+0100" ],
     "category" : [ "interviewing" ],
