MP: Update article week-notes/2021/13

--- a/content/week-notes/2021/13.md
+++ b/content/week-notes/2021/13.md
@@ -4,4 +4,4 @@ description: "What happened in the week of 2021-03-29?"
 date: "2021-04-04T23:00:00Z"
 draft: true
 ---
-Poor attempt at the toilet, flood bathroom
+A taste of summer, with some wonderful, social, times leading into Easter weekend
