Update this week's notes

--- a/content/week-notes/2021/13.md
+++ b/content/week-notes/2021/13.md
@@ -4,7 +4,7 @@ description: "What happened in the week of 2021-03-29?"
 date: "2021-04-04T23:00:00Z"
 draft: true
 ---
-A taste of summer, with some wonderful, social, times leading into Easter weekend
+A taste of summer, with some wonderful social times leading into Easter weekend:
 
 - Had a fun dream, that I felt I'd already had, which involved Alan Tudyk testing RPGs, a chase across (I think) the Titanic, a high speed chase across boats and waterskis
 - Had some good progress with Chef pipelines, but was reminded that we can't get too much done next PI as the original plan was just refinement, but we may be able to get some of the groundwork / connectivity pieces, so the rest of it can slot into place
@@ -18,9 +18,12 @@ A taste of summer, with some wonderful, social, times leading into Easter weeken
   - Got the favourite lemon cheesecake, as per request
   - Ordered Doughnotts, with the Biscotti for Cat, but had a bit of a panic Friday morning with it not being available on Deliveroo until they opened, and thinking that I wouldn't be able to get them as I'd left it too late
   - Had some nice weather, although it was a bit chilly
+  - Athenian was a good choice again
   - Cat especially enjoyed my "2 health bars" style jumpers
   - Got some really cool presents too
   - Morph's unsupervised time in the garage definitely didn't help<span style="display: none">, especially when opening the garage door dripped spray</span>
+  - Disappointing Wok n Go was probably the only down point of the day
+  - Managed to open the kitchen window - all it took was a screwdriver and a hammer
 - Had a lovely time with Emma and Andrew on Sunday, chilling and chatting
   - Again, really nice to start to feel back to normal
   - Weather was a bit better than when the family were here
@@ -28,7 +31,8 @@ A taste of summer, with some wonderful, social, times leading into Easter weeken
 - Not the best week for meetups
 - Abs/back have not enjoyed a few days of unsupportive chairs
 - My recording setup is ready to go, so I kinda just need to do it
-- Made an attempt at looking into the toilet **??**, but ended up **??**. Had a partial fix for it, but needed to buy an actual part for it
+- Made an attempt at looking into the water around the toilet, but ended up making it worse with my first attempt. Sellotape fixed it for a couple of days, but needed to buy an actual part for it
+- Morph's enjoyed us being around in the garden, hanging around in the garden too, sunning himself and checking on the worms - which the family mentioned was the most they've seen of him
 
 Watched:
 
@@ -39,4 +43,4 @@ Watched:
 - _13 Going on 30_, but gave up about half way through
 - _This Is Where I Leave You_
 - _Crashing_
-- The start of _Booksmart_
+- Half of _Booksmart_
