Update this week's notes

--- a/content/week-notes/2021/13.md
+++ b/content/week-notes/2021/13.md
@@ -5,3 +5,38 @@ date: "2021-04-04T23:00:00Z"
 draft: true
 ---
 A taste of summer, with some wonderful, social, times leading into Easter weekend
+
+- Had a fun dream, that I felt I'd already had, which involved Alan Tudyk testing RPGs, a chase across (I think) the Titanic, a high speed chase across boats and waterskis
+- Had some good progress with Chef pipelines, but was reminded that we can't get too much done next PI as the original plan was just refinement, but we may be able to get some of the groundwork / connectivity pieces, so the rest of it can slot into place
+  - Got the -next pipelines to a pretty good place though, and I'm quite happy with the design as-is
+- Had a good afternoon pairing with Prashant this week, digging into some real life solutions and found it to be a really invigorating session!
+- Had a lovely Tuesday lunch at Carol and Thom's, which was absolutely wonderful, although I was a bit gutted we had to head home for retro, as the weather and company were such a great mix
+- Had my family up on Friday, which was really nice
+  - Had a fair bit of pressure this week getting the house ready ahead of The Maids on Thursday, although the house is now looking really awesome, much bigger, and is amazing when it's been properly cleaned!
+  - Managed to de-spider inside/outside the conservatory, and get rid of some super thick spiderwebs inside
+  - First time seeing them for almost 6 months, when they last came to see the house with us
+  - Got the favourite lemon cheesecake, as per request
+  - Ordered Doughnotts, with the Biscotti for Cat, but had a bit of a panic Friday morning with it not being available on Deliveroo until they opened, and thinking that I wouldn't be able to get them as I'd left it too late
+  - Had some nice weather, although it was a bit chilly
+  - Cat especially enjoyed my "2 health bars" style jumpers
+  - Got some really cool presents too
+  - Morph's unsupervised time in the garage definitely didn't help<span style="display: none">, especially when opening the garage door dripped spray</span>
+- Had a lovely time with Emma and Andrew on Sunday, chilling and chatting
+  - Again, really nice to start to feel back to normal
+  - Weather was a bit better than when the family were here
+  - Had a super tasty, but very big, Annie's _Vermont_
+- Not the best week for meetups
+- Abs/back have not enjoyed a few days of unsupportive chairs
+- My recording setup is ready to go, so I kinda just need to do it
+- Made an attempt at looking into the toilet **??**, but ended up **??**. Had a partial fix for it, but needed to buy an actual part for it
+
+Watched:
+
+- The end of _Pitch Perfect 2_
+- _Friday Night Dinner_, which ended nicely
+- _Suits_
+- _The Falcon and the Winter Soldier_
+- _13 Going on 30_, but gave up about half way through
+- _This Is Where I Leave You_
+- _Crashing_
+- The start of _Booksmart_
