MP: Update article week-notes/2021/13

--- a/content/week-notes/2021/13.md
+++ b/content/week-notes/2021/13.md
@@ -42,4 +42,4 @@ Watched:
 - _13 Going on 30_, but gave up about half way through
 - _This Is Where I Leave You_
 - _Crashing_
-- Half of _Booksmart_
+- _Booksmart_
