MP: Update replies 2021/04/x036h

--- a/content/mf2/2021/04/x036h.md
+++ b/content/mf2/2021/04/x036h.md
@@ -5,7 +5,7 @@
   "h" : "h-entry",
   "properties" : {
     "in-reply-to" : [ "https://twitter.com/voxpelli/status/1379875760438136833" ],
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/JamieTanna/status/1379877348758204417" ],
     "name" : [ "Reply to https://twitter.com/voxpelli/status/1379875760438136833" ],
     "published" : [ "2021-04-07T20:20:00+0100" ],
     "category" : [ "github" ],
