MP: Update likes 2021/04/9f37e

--- a/content/mf2/2021/04/9f37e.md
+++ b/content/mf2/2021/04/9f37e.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/seriouslyclara/status/1367566687763984384" ],
     "name" : [ "Like of @seriouslyclara's tweet" ],
     "published" : [ "2021-04-10T16:51:00+0100" ],
     "category" : [ "cute", "tiktok" ],
