Update article week-notes/2021/14

--- a/content/week-notes/2021/14.md
+++ b/content/week-notes/2021/14.md
@@ -4,4 +4,35 @@ description: "What happened in the week of 2021-04-05?"
 date: "2021-04-11T23:00:00Z"
 draft: true
 ---
-f
+A pretty alright four day week:
+
+- Got my talk for TN done ahead of next week!
+  - Was pretty happy I got it done so far ahead of the event, as we were all quite sure that I was gonna be doing it live
+  - Felt much better, having the dry run and recording on Monday
+  - Feedback from Andrew and Carol was super helpful, and meant that Thursday evening I got it recorded, and it was just off my mind!
+- Prep for PI planning has gone well, and things are looking good for the next week
+- Had a really bad sleep ahead of work on Tuesday, which meant it was quite a slow day, but was alright given it was coming back after the long weekend
+- Some more vivid dreams this week:
+  - May have fought one of my colleagues, fled the scene and ran for miles
+  - Found cats hiding in the spare room cause they burrowed in? Very weird, and no idea how Morph didn't know there were _so many_ cats in the house, although wondered if that was what caused him to be like he is
+  - There was definitely something like a plane crash, or a not quite plane crash?
+  - Had a holiday to Australia, aside from the snake attacks
+- Played a good game of Five Finger Showdown with the team, and learned soem cool things about everyone
+- Had some good games of Apex this week
+- Had a nice Saturday with Anna's fam at Clumber Park, although I definitely didn't dress warmly
+  - Had a very cute breakfast with Morph resting his head on the side of his bed, poking out and keeping one eye on us while he napped
+- Got our window film up in the bedroom for a bit more privacy from nebby neighbours, and shuffled things around
+- Doing some more good stuff with the Chef pipelines, and getting things into a place that I'm going to be especially pleased with!
+- Managed to get the clock on the boiler changed, after much difficulty
+- Made a stab at sorting the toilet, but have since procrastinated with calling the plumber. Maybe next week I'll do it?
+
+Watched:
+
+- Finished _Crashing_
+- _Suits_
+- _The Falcon and the Winter Soldier_
+- Finished _The Dutchess_
+- Finished _Big Mouth_
+- _Modern Family_
+- _Palm Springs_
+- Watched most of _Forgetting Sarah Marshall_ while writing these
