MP: Update article week-notes/2021/13

--- a/content/week-notes/2021/13.md
+++ b/content/week-notes/2021/13.md
@@ -32,6 +32,7 @@ A taste of summer, with some wonderful social times leading into Easter weekend:
 - My recording setup is ready to go, so I kinda just need to do it
 - Made an attempt at looking into the water around the toilet, but ended up making it worse with my first attempt. Sellotape fixed it for a couple of days, but needed to buy an actual part for it
 - Morph's enjoyed us being around in the garden, hanging around in the garden too, sunning himself and checking on the worms - which the family mentioned was the most they've seen of him
+- Was pretty impressed with the difference with an Ocado delivery has compared to other shops - overly polite, explanatory, and nicely packaged
 
 Watched:
 
