MP: Update likes 2021/04/25dc4

--- a/content/mf2/2021/04/25dc4.md
+++ b/content/mf2/2021/04/25dc4.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/annaecook/status/1383082056540844036" ],
     "name" : [ "Like of @annaecook's tweet" ],
     "published" : [ "2021-04-16T17:32:00+0100" ],
     "category" : [ "cute" ],
