Update last week's notes

--- a/content/week-notes/2021/14.md
+++ b/content/week-notes/2021/14.md
@@ -28,7 +28,7 @@ A pretty alright four day week:
 - Got [a really cool shout out on Twitter for my site](https://twitter.com/jwgoerlich/status/1381343132944584705), pretty nice from someone with 52K followers!
 - Got the awesome [Purple Pandas](https://media.jvt.me/2fe2d7ed8c.jpeg) and [Asgard](https://media.jvt.me/e7b198859f.jpeg) team hoodies
 - Eaten a fair bit more chocolate than I should have
-- Had a really bad sleep with my back not being super happy, and ended up being able to listen to most of Temple Rain on Headspace, which was nice, but not as nice
+- Had a really bad sleep on Tuesday with my back not being super happy, and ended up being able to listen to most of Temple Rain on Headspace, which was nice, but not as nice
 - Ordered a Topo Mat for standing, a bit pricey, but will hopefully make standing easier
 
 Watched:
