Update last week's notes

--- a/content/week-notes/2021/14.md
+++ b/content/week-notes/2021/14.md
@@ -24,6 +24,11 @@ A pretty alright four day week:
 - Doing some more good stuff with the Chef pipelines, and getting things into a place that I'm going to be especially pleased with!
 - Managed to get the clock on the boiler changed, after much difficulty
 - Made a stab at sorting the toilet, but have since procrastinated with calling the plumber. Maybe next week I'll do it?
+- Mum got her second dose of vaccine!
+- Got [a really cool shout out on Twitter for my site](https://twitter.com/jwgoerlich/status/1381343132944584705), pretty nice from someone with 52K followers!
+- Got the awesome [Purple Pandas](https://media.jvt.me/2fe2d7ed8c.jpeg) and [Asgard](https://media.jvt.me/e7b198859f.jpeg) team hoodies
+- Eaten a fair bit more chocolate than I should have
+- Had a really bad sleep with my back not being super happy, and ended up being able to listen to most of Temple Rain on Headspace, which was nice, but not as nice
 
 Watched:
 
