Update last week's notes

--- a/content/week-notes/2021/14.md
+++ b/content/week-notes/2021/14.md
@@ -29,6 +29,7 @@ A pretty alright four day week:
 - Got the awesome [Purple Pandas](https://media.jvt.me/2fe2d7ed8c.jpeg) and [Asgard](https://media.jvt.me/e7b198859f.jpeg) team hoodies
 - Eaten a fair bit more chocolate than I should have
 - Had a really bad sleep with my back not being super happy, and ended up being able to listen to most of Temple Rain on Headspace, which was nice, but not as nice
+- Ordered a Topo Mat for standing, a bit pricey, but will hopefully make standing easier
 
 Watched:
 
@@ -39,4 +40,6 @@ Watched:
 - Finished _Big Mouth_
 - _Modern Family_
 - _Palm Springs_
+- _This is 40_
+- _How to Lose a Guy in 10 Days_
 - Watched most of _Forgetting Sarah Marshall_ while writing these
