Update this week's notes

--- a/content/week-notes/2021/15.md
+++ b/content/week-notes/2021/15.md
@@ -6,15 +6,17 @@ draft: true
 ---
 The end of a PI, the start of planning, and a successful Tech Nottingham:
 
-- My IndieWeb talk at Tech Nottingham on Monday went well!
+- My [IndieWeb talk at Tech Nottingham](https://www.youtube.com/watch?v=qFXOZww5mmE) on Monday went well!
   - Was really nice to just kick back and enjoy the talk with everyone else, and chatting on Slack
   - Had some good questions, and nothing as out there as Josh's NottsJS talk
+  - Felt quite happy, and that it was a bit of a relief having it over, not that I'd spent a lot of time prepping for it 😅
 - Dad got his second dose of vaccine!
-- Stood on Morph's foot while doing Ring Fit, which was very not great. He ran away from me, even when I tried to get some Dreamies, and did it again, sprinting out the cat flap 🥺
+- Stood on Morph's foot while doing Ring Fit, which was very not great. He ran away from me, even when I tried to get some Dreamies, then did it again, sprinting out the cat flap 🥺
 - Morph's spent a fair bit of time outside this week outside enjoying the weather, and has made a pass at a couple of squirrels
 - Dropped off Carol and Thom's housewarming presents and had a nice time chatting
 - Had a dream I made Andrew a non-Vegan cheese panini, who was too polite to not eat it all
 - Planning has been alright so far, there's a couple of things we're doing to shuffle things around to support the rest of the goal team, and of course had surprise extra work to do
+  - Been enjoying not talking all the time, and 9-4 days have been better, and we're in a really good place so far
 - Had a good bit of fun with [dependency graphs for Chef]({{< ref 2021-04-18-chef-dependency-graph >}}), looking into dependency graphs, and learning a bit more about Berkshelf's inner workings and Chef's upload process
 - In Chef pipelines, managed to finalise my Test Kitchen setup, played with Terraform, and got some good buy-in for next PI, ahead of Monday's planning with Orion
 - New standing mat is pretty good, and has made it a bit different and a bit less fatigued
