Update this week's notes

--- a/content/week-notes/2021/15.md
+++ b/content/week-notes/2021/15.md
@@ -4,11 +4,32 @@ description: "What happened in the week of 2021-04-12?"
 date: "2021-04-18T23:00:00Z"
 draft: true
 ---
+The end of a PI, the start of planning, and a successful Tech Nottingham:
+
+- My IndieWeb talk at Tech Nottingham on Monday went well!
+  - Was really nice to just kick back and enjoy the talk with everyone else, and chatting on Slack
+  - Had some good questions, and nothing as out there as Josh's NottsJS talk
+- Dad got his second dose of vaccine!
+- Stood on Morph's foot while doing Ring Fit, which was very not great. He ran away from me, even when I tried to get some Dreamies, and did it again, sprinting out the cat flap 🥺
+- Morph's spent a fair bit of time outside this week outside enjoying the weather, and has made a pass at a couple of squirrels
+- Dropped off Carol and Thom's housewarming presents and had a nice time chatting
+- Had a dream I made Andrew a non-Vegan cheese panini, who was too polite to not eat it all
+- Planning has been alright so far, there's a couple of things we're doing to shuffle things around to support the rest of the goal team, and of course had surprise extra work to do
+- Had a good bit of fun with [dependency graphs for Chef]({{< ref 2021-04-18-chef-dependency-graph >}}), looking into dependency graphs, and learning a bit more about Berkshelf's inner workings and Chef's upload process
+- In Chef pipelines, managed to finalise my Test Kitchen setup, played with Terraform, and got some good buy-in for next PI, ahead of Monday's planning with Orion
+- New standing mat is pretty good, and has made it a bit different and a bit less fatigued
+- Tonight's leftovers dinner wasn't too filling, so had a not-quite-poutine which was very good
+- Another pretty bad night's sleep coming into Monday morning
+- A quiet Homebrew unfortunately, especially after plugging it a fair bit in my talk
+- Ended up having a good catch up with Cat instead of getting to PHPMiNDS
+- Plumber still hasn't been called
+- Set up Anna's new desk on Saturday, and the new office setup looks awesome
+
 Watched:
 
-- _Suits_
+- Finished _Forgetting Sarah Marshall_
 - _Sex Education_
 - _The Falcon and the Winter Soldier_
 - _Modern Family_
 - _Thunder Force_
-- Finished _Forgetting Sarah Marshall_
+- _The Five Year Engagement_
