MP: Update article week-notes/2021/15

--- a/content/week-notes/2021/15.md
+++ b/content/week-notes/2021/15.md
@@ -25,6 +25,7 @@ The end of a PI, the start of planning, and a successful Tech Nottingham:
 - Ended up having a good catch up with Cat instead of getting to PHPMiNDS
 - Plumber still hasn't been called
 - Set up Anna's new desk on Saturday, and the new office setup looks awesome
+- Morph got his new tower, but hasn't been using it as much as we'd hoped (yet) but are hoping he settles into it
 
 Watched:
 
