MP: Update rsvps 2021/04/43zk4

--- a/content/mf2/2021/04/43zk4.md
+++ b/content/mf2/2021/04/43zk4.md
@@ -5,7 +5,7 @@
   "h" : "h-entry",
   "properties" : {
     "in-reply-to" : [ "https://www.meetup.com/Women-In-Tech-Nottingham/events/277647614/" ],
-    "syndication" : [ "https://brid.gy/publish/meetup" ],
+    "syndication" : [ "https://www.meetup.com/Women-In-Tech-Nottingham/events/277647614/#rsvp-by-https%3A%2F%2Fwww.jvt.me%2Fmf2%2F2021%2F04%2F43zk4%2F" ],
     "published" : [ "2021-04-19T16:53:25.872Z" ],
     "rsvp" : [ "yes" ]
   },
