Update last week's notes

--- a/content/week-notes/2021/15.md
+++ b/content/week-notes/2021/15.md
@@ -9,6 +9,7 @@ The end of a PI, the start of planning, and a successful Tech Nottingham:
   - Was really nice to just kick back and enjoy the talk with everyone else, and chatting on Slack
   - Had some good questions, and nothing as out there as Josh's NottsJS talk
   - Felt quite happy, and that it was a bit of a relief having it over, not that I'd spent a lot of time prepping for it 😅
+  - Noticed as part of my prep to demo my site that step counts hadn't been publishing
 - Dad got his second dose of vaccine!
 - Stood on Morph's foot while doing Ring Fit, which was very not great. He ran away from me, even when I tried to get some Dreamies, then did it again, sprinting out the cat flap 🥺
 - Morph's spent a fair bit of time outside this week outside enjoying the weather, and has made a pass at a couple of squirrels
