Update this week's notes

--- a/content/week-notes/2021/16.md
+++ b/content/week-notes/2021/16.md
@@ -4,4 +4,27 @@ description: "What happened in the week of 2021-04-19?"
 date: "2021-04-25T23:00:00Z"
 draft: true
 ---
-The end of planning
+A pretty good week:
+
+- The end of planning, and kicking off the PI with some interesting stuff
+- _Finally_ measured up the windows, drew some diagrams, and am ready to send them off to the various companies for quotes tomorrow<span style="display: none">, after a weird dream where one of my wedding vows was to do them</span>
+- My site got pretty popular this week after Software Lead Weekly featured my Blogumentation post
+- Met some of the team on Saturday in West Bridgford and had a lovely time in the sun, [just chilling in the park](https://media.jvt.me/0cb5900c43.jpeg), and had a good couple of hours just chilling and chatting. Was nice seeing Shama, Bethany and Prashant in person for the first, time too! Tushar brought Doughnotts, too, which definitely helped too  😋
+- Got my [first contribution to Spotless raised](https://github.com/diffplug/spotless/pull/853), which I'm looking forward to using, and enjoyed trying out Reflection a little more
+- Fixed my step counts not publishing
+- Had a pretty awful sleep after a rather large first German Donner Kebab, given Chapati Junction being closed for Ramadan, which wasn't a great way to lead into the weekend
+- Got things almost done for Test Kitchen setup, and had some good feedback from consumer teams about the usefulness of the new pipeline setup
+- Although Morph seemed to be generally better and we thought he'd turned a corner, he's not had a great second half of the week
+- Made an awesome [crimble crumble](/mf2/2021/04/olqwn/)!
+- Had a bit of a panic with my desktop not working today, and no displays showing up, but it ended up working in the end
+- Excited for the new season of Apex Legends after the reveals this week
+
+Watched:
+
+- A very good end to _The Falcon and the Winter Soldier_
+- _Modern Family_
+- _The Five Year Engagement_
+- _Molly's Game_
+- _Drifters_
+- _Life As We Know It_
+- _The Witcher_
