Update this week's notes

--- a/content/week-notes/2021/16.md
+++ b/content/week-notes/2021/16.md
@@ -8,7 +8,7 @@ A pretty good week:
 - The end of planning, and kicking off the PI with some interesting stuff
 - _Finally_ measured up the windows, drew some diagrams, and am ready to send them off to the various companies for quotes tomorrow<span style="display: none">, after a weird dream where one of my wedding vows was to do them</span>
 - My site got pretty popular this week after Software Lead Weekly featured my Blogumentation post
-- Met some of the team on Saturday in West Bridgford and had a lovely time in the sun, [just chilling in the park](https://media.jvt.me/0cb5900c43.jpeg), and had a good couple of hours just chilling and chatting. Was nice seeing Shama, Bethany and Prashant in person for the first, time too! Tushar brought Doughnotts, too, which definitely helped too  😋
+- Met some of the team on Saturday in West Bridgford and had a lovely time in the sun, [just chilling in the park](https://media.jvt.me/0cb5900c43.jpeg), and had a good couple of hours just chilling and chatting. Was nice seeing Shama, Bethany and Prashant in person for the first, time too! Tushar brought Doughnotts, too, which definitely helped too  😋 (and also was probably the first time I've worn jeans since last March)
 - Got my [first contribution to Spotless raised](https://github.com/diffplug/spotless/pull/853), which I'm looking forward to using, and enjoyed trying out Reflection a little more
 - Fixed my step counts not publishing
 - Had a pretty awful sleep after a rather large first German Donner Kebab, given Chapati Junction being closed for Ramadan, which wasn't a great way to lead into the weekend
@@ -18,6 +18,7 @@ A pretty good week:
 - Had a bit of a panic with my desktop not working today, and no displays showing up, but it ended up working in the end
 - Excited for the new season of Apex Legends after the reveals this week
 - Got the first Asda pizza of the new house! Although it took a bit longer in the current oven, it was perfect, and went well with the chicken dippers starter
+- Morph's definitely been using his new secret bed in the kitchen
 
 Watched:
 
