Update this week's notes

--- a/content/week-notes/2021/16.md
+++ b/content/week-notes/2021/16.md
@@ -19,6 +19,7 @@ A pretty good week:
 - Excited for the new season of Apex Legends after the reveals this week
 - Got the first Asda pizza of the new house! Although it took a bit longer in the current oven, it was perfect, and went well with the chicken dippers starter
 - Morph's definitely been using his new secret bed in the kitchen
+- Had my blog be quite popular at work too - apparently it's been mentioned in another goal team's ceremonies, and I've had someone reach out to say thanks for one of my posts
 
 Watched:
 
