MP: Update likes 2021/04/i2z36

--- a/content/mf2/2021/04/i2z36.md
+++ b/content/mf2/2021/04/i2z36.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/System32Comics/status/1387122586719383552" ],
     "name" : [ "Like of @System32Comics's tweet" ],
     "published" : [ "2021-04-28T08:07:00+0100" ],
     "category" : [ "cryptocurrency" ],
