MP: Update replies 2021/04/8eq61

--- a/content/mf2/2021/04/8eq61.md
+++ b/content/mf2/2021/04/8eq61.md
@@ -5,7 +5,7 @@
   "h" : "h-entry",
   "properties" : {
     "in-reply-to" : [ "https://www.jvt.me/mf2/2021/04/x6mbb/" ],
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/JamieTanna/status/1387837185341132806" ],
     "name" : [ "Reply to https://www.jvt.me/mf2/2021/04/x6mbb/" ],
     "published" : [ "2021-04-29T18:01:05.546Z" ],
     "category" : [ "wiremock" ],
