MP: Update notes 2021/05/8t3p8

--- a/content/mf2/2021/05/8t3p8.md
+++ b/content/mf2/2021/05/8t3p8.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/JamieTanna/status/1388502191279857665" ],
     "published" : [ "2021-05-01T15:32:00+0100" ],
     "category" : [ "titanfall2" ],
     "post-status" : [ "published" ],
