--- a/content/mf2/2021/05/mg612.md
+++ b/content/mf2/2021/05/mg612.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/amy_ginsburg1/status/1388586949166907395" ],
     "name" : [ "Like of @amy_ginsburg1's tweet" ],
     "published" : [ "2021-05-02T12:19:00+0100" ],
     "category" : [ "social-media" ],
