Update article week-notes/2021/17

--- a/content/week-notes/2021/17.md
+++ b/content/week-notes/2021/17.md
@@ -7,9 +7,34 @@ draft: true
 A four day week ahead of a four day weekend:
 
 - Productive time with bits around the house:
-
-- Plans for the Stubs Service got a little bit ? when we realised two things:
-  - Wiremock running its own HTTP server for requests, in a Lambda is slow
-    - Had some fun with digging into the source for Wiremock to work out how to [run it without an HTTP server] including a first pass with reflection - was pretty energising finding a problem that hadn't been documented, and solving it
+  - Installed a magnetic door holder for the garage door, but forgot to check it would work with a fire door - it does not
+  - Stopped the garage door from slamming
+  - Put up a mirror in the bathroom
+  - Put the Dyson away in the cupboard
+  - And got the plumber called for the bathroom and kitchen tap!
+  - Got the window measurements sent out
+  - Did spare room samples, but have gone back to the drawing board
+- Had to shuffle around the approach for Wiremock in a Lambda, which came in just before the long weekend, so had a little bit of a frantic time looking into the path forward
+  - Had some fun with digging into the source for Wiremock to work out how to [run it without an HTTP server]({{< ref 2021-04-29-wiremock-serverless >}}) including a first pass with reflection - was pretty energising finding a problem that hadn't been documented, and solving it, especially being able to make some good progress during lunch
+  - Had some fun fighting / working around Localstack's Lambda invoker expecting functions to exit, not allowing background execution for the Wiremock server in the local tests
   - Also pretty awesome conversations / enablement around reframing our approach
-  - Localstack expects a function to
+- Blogumentation was featured in CTO Craft, so got some good traffic from that this week
+- Got an awesome birthday present from Carol and Thom - photos to follow!
+- Had a nice time at Sneinton Market street food club, although it was a shame there were only five of us - weather stayed pretty nice, although it was fairly cool towards the end of the evening. Nice to have a bit of a normal time out
+- Had an enlightening conversationa about maybe being a bit too eager to commit to one of our epics in planning, but am looking forward to making sure we do everything we can to stay on track, especially with some awkward conversations this week about unplanned work
+- Had some fun with Titanfall|2 this weekend, and am really hoping there's going to be more folks playing it going forward, so there's a bit of a mix of Apex and TF2, but it's been good having a break from the grind of Apex ahead of an exciting new season
+- Played around with Lambda@Edge to speed up syndication - I've not yet pushed it live, but likely will this week, before adding the ability to send those webmentions early - as well as the inevitable blog post
+- Had some fun chats with folks after they'd read my week notes
+- Aligned the Lambda projects at work and put things forward with the versioning aspect for the ATs, too
+- House is looking really nice now it's all clean and tidy after a weekend of seeing peeps
+
+Watched:
+
+- _The Witcher_
+- _Drifters_
+- _Sex Education_
+- _Paradise P.D._
+- _Headspace Guide to Sleep_
+- _Love and Monsters_
+- _Unicorn Store_
+- _The Terminal_
