Update article week-notes/2021/17

--- a/content/week-notes/2021/17.md
+++ b/content/week-notes/2021/17.md
@@ -20,6 +20,7 @@ A four day week ahead of a four day weekend:
 - Blogumentation was featured in CTO Craft, so got some good traffic from that this week
 - Got an awesome birthday present from Carol and Thom - photos to follow!
 - Had a nice time at Sneinton Market street food club, although it was a shame there were only five of us - weather stayed pretty nice, although it was fairly cool towards the end of the evening. Nice to have a bit of a normal time out
+  - Was the first walk into town since moving to the new house, and it was nice how much closer it was
 - Had an enlightening conversationa about maybe being a bit too eager to commit to one of our epics in planning, but am looking forward to making sure we do everything we can to stay on track, especially with some awkward conversations this week about unplanned work
 - Had some fun with Titanfall|2 this weekend, and am really hoping there's going to be more folks playing it going forward, so there's a bit of a mix of Apex and TF2, but it's been good having a break from the grind of Apex ahead of an exciting new season
 - Played around with Lambda@Edge to speed up syndication - I've not yet pushed it live, but likely will this week, before adding the ability to send those webmentions early - as well as the inevitable blog post
@@ -27,6 +28,10 @@ A four day week ahead of a four day weekend:
 - Aligned the Lambda projects at work and put things forward with the versioning aspect for the ATs, too
 - House is looking really nice now it's all clean and tidy after a weekend of seeing peeps
 - Got the Pixel 5 for my work phone so been setting that up, and been enjoying the edge-less display so far
+- Had a bit of back and forth with my Spotless PR, making it a) better and b) actually work
+- A couple of friends are leaving work<span style="display: none">, triggering the thinking again about what's next for me</span>
+- Didn't do Ring Fit on Wednesday, planning on doing it on Thursday, but did at least do it on Friday. Given we were tidying the house in the morning, I did an evening session which was nice as it gave me a bit more time
+- Lost one of the Gousto packets, asked for a refund, found it, but haven't yet made it
 
 Watched:
 
