MP: Update likes 2021/05/9nx81

--- a/content/mf2/2021/05/9nx81.md
+++ b/content/mf2/2021/05/9nx81.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/Jaimi_Shrive/status/1389507532822040579" ],
     "name" : [ "Like of @Jaimi_Shrive's tweet" ],
     "published" : [ "2021-05-04T10:21:00+0100" ],
     "like-of" : [ "https://twitter.com/Jaimi_Shrive/status/1389507532822040579" ],
